--- a/index.html
+++ b/index.html
@@ -2,58 +2,54 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
 <title>بوت كوكب — واجهة محادثة</title>
 <style>
 :root{
-  --accent:#0f1724; /* dark navy */
-  --accent-2:#0ea5a4; /* teal */
+  --accent:#0f1724; 
+  --accent-2:#0ea5a4; 
   --bg:#f7fbff;
   --card:#ffffff;
   --user-bg:#dff7ff;
   --bot-bg:#fff8e6;
   --muted:#667085;
-  --radius:14px;
+  --radius:16px;
 }
-*{box-sizing:border-box}
-html,body{height:100%;margin:0;font-family:Tahoma,Arial,system-ui;background:linear-gradient(180deg,var(--bg),#ffffff)}
-.widget{width:360px;height:560px;border-radius:18px;overflow:hidden;box-shadow:0 18px 50px rgba(2,6,23,0.18);display:flex;flex-direction:column;background:var(--card)}
-.header{background:linear-gradient(90deg,var(--accent),var(--accent-2));color:#fff;padding:14px 12px;font-weight:700;display:flex;gap:10px;align-items:center}
-.header .title{flex:1;font-size:16px}
-.header .sub{font-size:12px;opacity:0.95}
-.header .dot{width:10px;height:10px;border-radius:50%;background:#fff3;box-shadow:0 2px 6px #0003}
-.area{flex:1;padding:14px;overflow:auto;background:linear-gradient(180deg,#fbfdff, #f6fbff)}
-.controls{padding:10px;border-top:1px solid #eef2f6;background:transparent;display:flex;gap:8px;align-items:center}
-.input{display:flex;gap:8px;align-items:center;width:100%}
-.input input{flex:1;padding:10px 12px;border-radius:12px;border:1px solid #e6eef6;background:#fff;font-size:14px}
-.btn{padding:10px 12px;border-radius:12px;border:none;background:var(--accent);color:#fff;cursor:pointer}
-.quick{display:flex;gap:6px;margin-bottom:8px}
-.quick button{flex:1;padding:8px;border-radius:10px;border:1px dashed rgba(2,6,23,0.06);background:transparent;font-size:13px;color:var(--accent);cursor:pointer}
-.msg{margin:10px 0;display:flex;gap:8px;align-items:flex-end;max-width:95%}
-.msg .bubble{padding:10px 12px;border-radius:10px;line-height:1.35;box-shadow:0 6px 18px rgba(2,6,23,0.06)}
-.msg.user{margin-left:auto;flex-direction:row-reverse}
-.msg.user .bubble{background:var(--user-bg);border:1px solid rgba(0,0,0,0.03)}
-.msg.bot .bubble{background:var(--bot-bg);border:1px solid rgba(245,231,158,0.6)}
-.meta{font-size:12px;color:var(--muted);margin-top:6px}
-.status{display:none;padding:8px 12px;text-align:center;font-size:13px;color:#b00}
-.fade-in{animation:fadeIn .28s ease}
-@keyframes fadeIn{from{opacity:0;transform:translateY(6px)}to{opacity:1;transform:none}}
-.typing{height:14px;display:inline-block}
-.typing span{display:inline-block;width:6px;height:6px;background:var(--muted);border-radius:50%;margin:0 2px;animation:dot 1s infinite}
+*{box-sizing:border-box; margin:0; padding:0}
+html,body{height:100%; font-family:Tahoma,Arial,system-ui; background:var(--bg); display:flex; justify-content:center; align-items:center;}
+.widget{width:100%; max-width:400px; height:90vh; border-radius:18px; overflow:hidden; display:flex; flex-direction:column; background:var(--card); box-shadow:0 16px 40px rgba(0,0,0,0.15);}
+.header{background:linear-gradient(90deg,var(--accent),var(--accent-2)); color:#fff; padding:14px 12px; font-weight:700; display:flex; gap:10px; align-items:center;}
+.header .title{flex:1; font-size:16px;}
+.header .sub{font-size:13px; opacity:0.95;}
+.header .dot{width:10px; height:10px; border-radius:50%; background:#fff3;}
+.area{flex:1; padding:12px; overflow-y:auto; display:flex; flex-direction:column; gap:6px; background:linear-gradient(180deg,#fbfdff,#f6fbff);}
+.controls{padding:8px; border-top:1px solid #eef2f6; background:transparent; display:flex; flex-direction:column; gap:6px;}
+.input{display:flex; gap:8px; align-items:center; width:100%;}
+.input input{flex:1; padding:10px 12px; border-radius:14px; border:1px solid #e6eef6; background:#fff; font-size:14px;}
+.btn{padding:10px 14px; border-radius:14px; border:none; background:var(--accent); color:#fff; cursor:pointer;}
+.quick{display:flex; gap:6px;}
+.quick button{flex:1; padding:8px; border-radius:12px; border:1px dashed rgba(0,0,0,0.05); background:transparent; font-size:13px; color:var(--accent); cursor:pointer;}
+.msg{display:flex; max-width:85%; flex-direction:column; word-break:break-word;}
+.msg .bubble{padding:10px 14px; border-radius:16px; line-height:1.4; box-shadow:0 4px 12px rgba(0,0,0,0.05);}
+.msg.user{align-self:flex-end;}
+.msg.user .bubble{background:var(--user-bg); border:1px solid rgba(0,0,0,0.05);}
+.msg.bot{align-self:flex-start;}
+.msg.bot .bubble{background:var(--bot-bg); border:1px solid rgba(245,231,158,0.6);}
+.meta{font-size:11px; color:var(--muted); margin-top:2px; text-align:right;}
+.typing{height:14px; display:flex; gap:4px;}
+.typing span{width:6px; height:6px; background:var(--muted); border-radius:50%; animation:dot 1s infinite;}
 .typing span:nth-child(2){animation-delay:.15s}
 .typing span:nth-child(3){animation-delay:.3s}
-@keyframes dot{0%{transform:translateY(0);opacity:.45}50%{transform:translateY(-6px);opacity:1}100%{transform:translateY(0);opacity:.45}}
-.footer-note{font-size:12px;color:var(--muted);padding:8px 12px;text-align:center}
-.small-muted{font-size:12px;color:var(--muted);margin-top:6px}
-.badge{display:inline-block;padding:6px 8px;border-radius:10px;background:#fff8;border:1px solid rgba(255,255,255,0.15);font-size:12px}
-/* responsive */
-@media (max-width:420px){.widget{width:320px;height:520px}}
+@keyframes dot{0%,100%{transform:translateY(0); opacity:.4}50%{transform:translateY(-5px); opacity:1}}
+::-webkit-scrollbar{width:6px;}
+::-webkit-scrollbar-thumb{background:rgba(0,0,0,0.1); border-radius:3px;}
+.footer-note{font-size:12px; color:var(--muted); text-align:center; padding:6px;}
 </style>
 </head>
 <body>
 <div class="widget" role="region" aria-label="بوت كوكب">
   <div class="header">
-    <div class="dot" aria-hidden></div>
+    <div class="dot"></div>
     <div class="title">بوت كوكب — خدمة العملاء</div>
     <div class="sub">تفاوض ذكي · خصومات حتى 20%</div>
   </div>
@@ -61,16 +57,14 @@ html,body{height:100%;margin:0;font-family:Tahoma,Arial,system-ui;background:lin
   <div class="area" id="area" aria-live="polite"></div>
 
   <div class="controls">
-    <div style="flex:1">
-      <div class="quick" id="quickActions">
-        <button data-text="أريد أفضل عرض">أفضل عرض</button>
-        <button data-text="موافق">أوافق</button>
-        <button data-text="هل في خصم أعلى؟">خصم أعلى</button>
-      </div>
-      <div class="input">
-        <input id="inp" type="text" placeholder="اكتب رسالتك..." aria-label="نص الرسالة" />
-        <button id="btn" class="btn">أرسل</button>
-      </div>
+    <div class="quick" id="quickActions">
+      <button data-text="أريد أفضل عرض">أفضل عرض</button>
+      <button data-text="موافق">أوافق</button>
+      <button data-text="هل في خصم أعلى؟">خصم أعلى</button>
+    </div>
+    <div class="input">
+      <input id="inp" type="text" placeholder="اكتب رسالتك..." aria-label="نص الرسالة" />
+      <button id="btn" class="btn">أرسل</button>
     </div>
   </div>
   <div class="footer-note">ملاحظة: لن يصدر كود إلا بعد انتهاء الوقت أو موافقتك.</div>
@@ -78,7 +72,6 @@ html,body{height:100%;margin:0;font-family:Tahoma,Arial,system-ui;background:lin
 
 <script>
 (function(){
-  // عزل المساحة لتفادي تعارضات مع بيئات أخرى
   const WORKER_URL = window.KAWKAB_WORKER_URL || 'https://kawkab.kawkab-arabia.workers.dev/';
   const area = document.getElementById('area');
   const inp = document.getElementById('inp');
@@ -92,142 +85,104 @@ html,body{height:100%;margin:0;font-family:Tahoma,Arial,system-ui;background:lin
   let finalized = false;
   let lastOfferPercent = null;
 
-  function safeText(s){
-    const d = document.createElement('div'); d.textContent = s; return d.innerHTML;
-  }
+  function safeText(s){ const d=document.createElement('div'); d.textContent=s; return d.innerHTML; }
 
-  function append(who, text, opts){
-    const wrapper = document.createElement('div');
-    wrapper.className = 'msg ' + (who === 'user' ? 'user' : 'bot') + ' fade-in';
-    const bubble = document.createElement('div');
-    bubble.className = 'bubble';
-    // allow small html (like line breaks) but escape otherwise
-    bubble.innerHTML = safeText((opts && opts.prefix) ? opts.prefix + ' ' : '') + text.replace(/\n/g,'<br>');
+  function append(who,text,opts){
+    const wrapper=document.createElement('div');
+    wrapper.className='msg '+(who==='user'?'user':'bot');
+    const bubble=document.createElement('div'); bubble.className='bubble';
+    bubble.innerHTML=safeText((opts&&opts.prefix)?opts.prefix+' ':'')+text.replace(/\n/g,'<br>');
     wrapper.appendChild(bubble);
-    // meta
-    const meta = document.createElement('div');
-    meta.className = 'meta small-muted';
-    const now = new Date();
-    meta.textContent = now.toLocaleTimeString('ar-EG', {hour:'2-digit',minute:'2-digit'});
+    const meta=document.createElement('div'); meta.className='meta';
+    meta.textContent=new Date().toLocaleTimeString('ar-EG',{hour:'2-digit',minute:'2-digit'});
     wrapper.appendChild(meta);
     area.appendChild(wrapper);
-    area.scrollTop = area.scrollHeight;
+    area.scrollTop=area.scrollHeight;
   }
 
   function showTyping(){
-    const el = document.createElement('div');
-    el.className = 'msg bot fade-in typing-wrap';
-    el.setAttribute('data-typing','1');
-    const b = document.createElement('div'); b.className = 'bubble';
-    b.innerHTML = '<div class="typing" aria-hidden><span></span><span></span><span></span></div>';
-    el.appendChild(b);
-    area.appendChild(el);
-    area.scrollTop = area.scrollHeight;
-  }
-  function removeTyping(){
-    const t = area.querySelector('[data-typing]'); if (t) area.removeChild(t);
+    const el=document.createElement('div'); el.className='msg bot';
+    const b=document.createElement('div'); b.className='bubble';
+    b.innerHTML='<div class="typing"><span></span><span></span><span></span></div>';
+    el.appendChild(b); area.appendChild(el); area.scrollTop=area.scrollHeight;
+    return el;
   }
 
   function extractPercentFromText(text){
-    const m = String(text).match(/\b([5-9]|1[0-9]|20)\b/);
-    if (m) return parseInt(m[0],10);
-    return null;
+    const m=String(text).match(/\b([5-9]|1[0-9]|20)\b/); return m?parseInt(m[0],10):null;
   }
 
-  function makeCode(percent){
-    const rnd = Math.floor(Math.random()*900)+100;
-    return 'FESAL' + percent + rnd;
-  }
+  function makeCode(percent){ return 'FESAL'+percent+Math.floor(Math.random()*900+100); }
 
   function startCountdownIfNeeded(){
-    if (timerStarted) return;
-    timerStarted = true;
-    timeLeft = 60;
-    const statusBubble = document.createElement('div');
-    statusBubble.className = 'msg bot fade-in';
+    if(timerStarted) return;
+    timerStarted=true; timeLeft=60;
+    const statusBubble=document.createElement('div'); statusBubble.className='msg bot';
     statusBubble.setAttribute('id','k-countdown');
-    statusBubble.innerHTML = '<div class="bubble">⏳ باقي <b id="k-time">' + timeLeft + '</b> ثانية للفصال...</div>';
-    area.appendChild(statusBubble);
-    area.scrollTop = area.scrollHeight;
-    countdownId = setInterval(()=>{
-      timeLeft--;
-      const el = document.getElementById('k-time'); if (el) el.textContent = timeLeft;
-      if (timeLeft <= 0){ clearInterval(countdownId); const s = document.getElementById('k-countdown'); if (s) s.remove(); if (!finalized) onTimerFinish(); }
+    statusBubble.innerHTML='<div class="bubble">⏳ باقي <b id="k-time">'+timeLeft+'</b> ثانية للفصال...</div>';
+    area.appendChild(statusBubble); area.scrollTop=area.scrollHeight;
+    countdownId=setInterval(()=>{
+      timeLeft--; const el=document.getElementById('k-time'); if(el) el.textContent=timeLeft;
+      if(timeLeft<=0){ clearInterval(countdownId); const s=document.getElementById('k-countdown'); if(s) s.remove(); if(!finalized) onTimerFinish(); }
     },1000);
   }
 
   async function sendToWorker(payload){
-    try{
-      const res = await fetch(WORKER_URL,{
-        method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)
-      });
-      return res;
-    }catch(e){ throw e; }
+    return await fetch(WORKER_URL,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)});
   }
 
   async function onTimerFinish(){
-    finalized = true;
-    append('bot','⏳ الوقت انتهى، سأثبت الخصم النهائي بناءً على آخر عرض قدمته.');
-    const percent = lastOfferPercent || 10;
-    const code = makeCode(percent);
-    append('bot', `الخصم النهائي: ${percent}% — (كود: ${code})`);
-    // طلب تبرير من الـ worker (اختياري)
+    finalized=true;
+    append('bot','⏳ الوقت انتهى، سأثبت الخصم النهائي على آخر عرض.');
+    const percent=lastOfferPercent||10;
+    const code=makeCode(percent);
+    append('bot',`الخصم النهائي: ${percent}% — (كود: ${code})`);
     try{
-      const res = await sendToWorker({ messages: historyMessages, finalize:true, percent_override: percent });
-      if (res && res.ok){ const j = await res.json(); if (j.reason) append('bot','(تبرير): ' + j.reason); }
+      const res=await sendToWorker({messages:historyMessages,finalize:true,percent_override:percent});
+      if(res&&res.ok){ const j=await res.json(); if(j.reason) append('bot','(تبرير): '+j.reason); }
     }catch(e){ console.error(e); }
   }
 
   function isAcceptanceMessage(text){
-    const t = text.trim().toLowerCase();
-    const okWords = ['موافق','تمام','أوافق','ماشي','اوكي','ok','نعم','قبول'];
-    for (const w of okWords){ if (t===w) return true; if (t.startsWith(w+' ')||t.endsWith(' '+w)||t.includes(' '+w+' ')) return true; }
-    return false;
+    const t=text.trim().toLowerCase();
+    return ['موافق','تمام','أوافق','ماشي','اوكي','ok','نعم','قبول'].some(w=>t===w||t.includes(' '+w+' '));
   }
 
   async function sendMessage(){
-    const txt = inp.value.trim(); if (!txt || finalized) return;
-    append('user', safeText(txt)); inp.value = '';
-    // add history
-    historyMessages.push({ role:'user', content: txt });
-
-    if (!timerStarted) startCountdownIfNeeded();
-
-    // show typing indicator
-    showTyping(); btn.disabled = true;
-
+    const txt=inp.value.trim(); if(!txt||finalized) return;
+    append('user',safeText(txt)); inp.value='';
+    historyMessages.push({role:'user',content:txt});
+    if(!timerStarted) startCountdownIfNeeded();
+    const typingEl=showTyping(); btn.disabled=true;
     try{
-      const res = await sendToWorker({ messages: historyMessages, finalize:false });
-      removeTyping();
-      if (!res.ok){ const txtErr = await res.text(); append('bot','خطأ في السيرفر: ' + txtErr); }
-      else{
-        const j = await res.json(); const reply = j.text || '(لا يوجد رد)';
-        const p = extractPercentFromText(reply); if (p) lastOfferPercent = p;
-        historyMessages.push({ role:'assistant', content: reply });
-        append('bot', reply);
-        if (isAcceptanceMessage(txt)){
-          const agreedPercent = lastOfferPercent || 10; finalized = true; if (countdownId) clearInterval(countdownId); const code = makeCode(agreedPercent);
-          append('bot', `تم تثبيت الخصم: ${agreedPercent}% — (كود: ${code})`);
-          try{ const rr = await sendToWorker({ messages: historyMessages, finalize:true, percent_override: agreedPercent }); if (rr.ok){ const jj = await rr.json(); if (jj.reason) append('bot','(تبرير): ' + jj.reason); } }catch(e){ console.error(e); }
+      const res=await sendToWorker({messages:historyMessages,finalize:false});
+      typingEl.remove();
+      if(!res.ok){ append('bot','خطأ في السيرفر'); } else{
+        const j=await res.json(); const reply=j.text||'(لا يوجد رد)';
+        const p=extractPercentFromText(reply); if(p) lastOfferPercent=p;
+        historyMessages.push({role:'assistant',content:reply});
+        append('bot',reply);
+        if(isAcceptanceMessage(txt)){
+          const agreedPercent=lastOfferPercent||10; finalized=true; if(countdownId) clearInterval(countdownId);
+          const code=makeCode(agreedPercent);
+          append('bot',`تم تثبيت الخصم: ${agreedPercent}% — (كود: ${code})`);
+          try{
+            const rr=await sendToWorker({messages:historyMessages,finalize:true,percent_override:agreedPercent});
+            if(rr.ok){ const jj=await rr.json(); if(jj.reason) append('bot','(تبرير): '+jj.reason); }
+          }catch(e){console.error(e);}
         }
       }
-    }catch(e){ removeTyping(); append('bot','(لا يوجد اتصال) جرب تاني'); console.error(e); }
-    finally{ btn.disabled = false; inp.focus(); }
+    }catch(e){ typingEl.remove(); append('bot','(لا يوجد اتصال) جرب تاني'); console.error(e);}
+    finally{ btn.disabled=false; inp.focus(); }
   }
 
-  // quick action buttons
-  quick.addEventListener('click', e=>{
-    const t = e.target; if (t.tagName!=='BUTTON') return; const text = t.getAttribute('data-text'); inp.value = text; inp.focus();
-  });
+  quick.addEventListener('click',e=>{ const t=e.target; if(t.tagName!=='BUTTON') return; inp.value=t.getAttribute('data-text'); inp.focus(); });
+  btn.addEventListener('click',sendMessage);
+  inp.addEventListener('keydown',e=>{ if(e.key==='Enter') sendMessage(); });
 
-  btn.addEventListener('click', sendMessage);
-  inp.addEventListener('keydown', e=>{ if (e.key==='Enter') sendMessage(); });
+  window.KAWKAB_WIDGET={setWorker:url=>{if(typeof url==='string'){window.KAWKAB_WORKER_URL=url; console.log('KAWKAB: worker set to',url);}}};
 
-  // expose small debug helper for embedding page to set worker url without touching file
-  window.KAWKAB_WIDGET = { setWorker(url){ if (typeof url==='string') { window.KAWKAB_WORKER_URL = url; console.log('KAWKAB: worker set to', url); } } };
-
-  // initial welcome
-  append('bot','أهلاً! أنا بوت التفاوض — أخبريني ما الذي ترغبين به، وسأحاول أحسن عرض ممكن.');
+  append('bot','أهلاً! أنا بوت كوكب — هنتفاوض على أحسن خصم وأحلي كلام عن البراند :)');
 
 })();
 </script>
