--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   --radius:16px;
 }
 *{box-sizing:border-box; margin:0; padding:0}
-html,body{height:100%; font-family:Tahoma,Arial,system-ui; background:var(--bg); display:flex; justify-content:center; align-items:center;}
-.widget{width:100%; max-width:400px; height:90vh; border-radius:18px; overflow:hidden; display:flex; flex-direction:column; background:var(--card); box-shadow:0 16px 40px rgba(0,0,0,0.15);}
+html,body{height:100%; font-family:Tahoma,Arial,system-ui; background:var(--bg);}
+body{display:flex; justify-content:center; align-items:flex-start;}
+.widget{width:100%; height:100vh; border-radius:0; overflow:hidden; display:flex; flex-direction:column; background:var(--card);}
 .header{background:linear-gradient(90deg,var(--accent),var(--accent-2)); color:#fff; padding:14px 12px; font-weight:700; display:flex; gap:10px; align-items:center;}
 .header .title{flex:1; font-size:16px;}
 .header .sub{font-size:13px; opacity:0.95;}
