--- a/chat-widget.html
+++ b/chat-widget.html
@@ -25,7 +25,7 @@ body{font-family:"Tahoma",system-ui;background:var(--bg);overflow-x:hidden;}
 .chat-fab:hover{transform:scale(1.1);}
 .chat-overlay {
   position:fixed; inset:0; background:rgba(0,0,0,0.5);
-  display:none; justify-content:center; align-items:center;
+  display:flex; justify-content:center; align-items:center;
   z-index:10000;
 }
 .chat-box {
