--- a/chat-widget.html
+++ b/chat-widget.html
@@ -25,7 +25,7 @@ body{font-family:"Tahoma",system-ui;background:var(--bg);overflow-x:hidden;}
 .chat-fab:hover{transform:scale(1.1);}
 .chat-overlay {
   position:fixed; inset:0; background:rgba(0,0,0,0.5);
-  display:flex; justify-content:center; align-items:center;
+  display:none; justify-content:center; align-items:center;
   z-index:10000;
 }
 .chat-box {
@@ -63,6 +63,7 @@ body{font-family:"Tahoma",system-ui;background:var(--bg);overflow-x:hidden;}
 </head>
 <body>
 
+<div class="chat-fab" id="openChat">💬</div>
 
 <div class="chat-overlay" id="chatOverlay">
   <div class="chat-box">
@@ -97,6 +98,7 @@ const quick=document.getElementById('quickActions');
 const WORKER_URL='https://kawkab.kawkab-arabia.workers.dev/';
 let historyMessages=[],lastOfferPercent=null,finalized=false,timerStarted=false,timeLeft=60,countdownId=null;
 
+openBtn.onclick=()=>{overlay.style.display='flex';document.body.style.overflow='hidden';};
 closeBtn.onclick=()=>{overlay.style.display='none';document.body.style.overflow='';};
 
 function safeText(s){const d=document.createElement('div');d.textContent=s;return d.innerHTML;}
