--- a/chat-widget.html
+++ b/chat-widget.html
@@ -61,66 +61,122 @@ body{font-family:"Tahoma",system-ui;background:var(--bg);overflow-x:hidden;}
 @keyframes dot{0%,100%{opacity:.3;transform:translateY(0);}50%{opacity:1;transform:translateY(-3px);}}
 </style>
 </head>
-<body>
-
-<div class="chat-fab" id="openChat">💬</div>
-
-<div class="chat-overlay" id="chatOverlay">
-  <div class="chat-box">
-    <div class="header">
-      <div class="title">بوت كوكب — فصال مباشر</div>
-      <button class="close" id="closeChat">×</button>
-    </div>
-    <div class="area" id="area"></div>
-    <div class="controls">
-      <div class="quick" id="quickActions">
-        <button data-text="أريد أفضل عرض">أفضل عرض</button>
-        <button data-text="هل في خصم أعلى؟">خصم أعلى</button>
-        <button data-text="تمام">تمام</button>
+<body style="background: transparent;">
+  <div class="chat-fab" id="openChat">💬</div>
+  <div class="chat-overlay" id="chatOverlay" style="background: transparent;">
+    <div class="chat-box" style="display:none;">
+      <div class="header">
+        <div class="title">بوت كوكب — فصال مباشر</div>
+        <button class="close" id="closeChat">×</button>
       </div>
-      <div class="input">
-        <input id="inp" type="text" placeholder="اكتب هنا..." />
-        <button id="btn" class="btn">أرسل</button>
+      <div class="area" id="area"></div>
+      <div class="controls">
+        <div class="quick" id="quickActions">
+          <button data-text="أريد أفضل عرض">أفضل عرض</button>
+          <button data-text="هل في خصم أعلى؟">خصم أعلى</button>
+          <button data-text="تمام">تمام</button>
+        </div>
+        <div class="input">
+          <input id="inp" type="text" placeholder="اكتب هنا..." />
+          <button id="btn" class="btn">أرسل</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<script>
-(function(){
-const openBtn=document.getElementById('openChat');
-const overlay=document.getElementById('chatOverlay');
-const closeBtn=document.getElementById('closeChat');
-const area=document.getElementById('area');
-const inp=document.getElementById('inp');
-const btn=document.getElementById('btn');
-const quick=document.getElementById('quickActions');
-const WORKER_URL='https://kawkab.kawkab-arabia.workers.dev/';
-let historyMessages=[],lastOfferPercent=null,finalized=false,timerStarted=false,timeLeft=60,countdownId=null;
+  <script>
+    (function(){
+      const openBtn=document.getElementById('openChat');
+      const overlay=document.getElementById('chatOverlay');
+      const box=document.querySelector('.chat-box');
+      const closeBtn=document.getElementById('closeChat');
+      const area=document.getElementById('area');
+      const inp=document.getElementById('inp');
+      const btn=document.getElementById('btn');
+      const quick=document.getElementById('quickActions');
+      const WORKER_URL='https://kawkab.kawkab-arabia.workers.dev/';
+      let historyMessages=[],finalized=false;
 
-openBtn.onclick=()=>{overlay.style.display='flex';document.body.style.overflow='hidden';};
-closeBtn.onclick=()=>{overlay.style.display='none';document.body.style.overflow='';};
+      // الزرار يفتح الشات
+      openBtn.onclick=()=>{
+        box.style.display='flex';
+        openBtn.style.display='none';
+      };
 
-function safeText(s){const d=document.createElement('div');d.textContent=s;return d.innerHTML;}
-function append(who,text){const w=document.createElement('div');w.className='msg '+(who==='user'?'user':'bot');const b=document.createElement('div');b.className='bubble';b.innerHTML=safeText(text);w.appendChild(b);const m=document.createElement('div');m.className='meta';m.textContent=new Date().toLocaleTimeString('ar-EG',{hour:'2-digit',minute:'2-digit'});w.appendChild(m);area.appendChild(w);area.scrollTop=area.scrollHeight;}
-function showTyping(){const el=document.createElement('div');el.className='msg bot';el.innerHTML='<div class="bubble"><div class="typing"><span></span><span></span><span></span></div></div>';area.appendChild(el);area.scrollTop=area.scrollHeight;return el;}
-async function sendToWorker(payload){return await fetch(WORKER_URL,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)});}
-async function sendMessage(){const txt=inp.value.trim();if(!txt||finalized)return;append('user',txt);inp.value='';const typing=showTyping();btn.disabled=true;
-try{
-const res=await sendToWorker({messages:historyMessages.concat([{role:'user',content:txt}])});
-typing.remove();
-const j=await res.json();
-const reply=j.text||'مش فاهمك قوي 😅 جرب تاني';
-append('bot',reply);
-historyMessages.push({role:'user',content:txt},{role:'assistant',content:reply});
-}catch(e){typing.remove();append('bot','النت فاصل ولا إيه؟ 😅');}
-btn.disabled=false;inp.focus();}
-btn.onclick=sendMessage;
-inp.onkeydown=e=>{if(e.key==='Enter')sendMessage();};
-quick.onclick=e=>{if(e.target.tagName==='BUTTON'){inp.value=e.target.dataset.text;inp.focus();}}
-inp.addEventListener('focus',()=>{setTimeout(()=>{area.scrollTop=area.scrollHeight;},300);});
-append('bot','أهلاً بيك في بوت كوكب! قولّي إنت عايز تفاوض على إيه؟ 😎');
-})();
-</script>
+      // زرار الإغلاق
+      closeBtn.onclick=()=>{
+        box.style.display='none';
+        openBtn.style.display='flex';
+      };
+
+      function safeText(s){
+        const d=document.createElement('div');
+        d.textContent=s;
+        return d.innerHTML;
+      }
+
+      function append(who,text){
+        const w=document.createElement('div');
+        w.className='msg '+(who==='user'?'user':'bot');
+        const b=document.createElement('div');
+        b.className='bubble';
+        b.innerHTML=safeText(text);
+        w.appendChild(b);
+        const m=document.createElement('div');
+        m.className='meta';
+        m.textContent=new Date().toLocaleTimeString('ar-EG',{hour:'2-digit',minute:'2-digit'});
+        w.appendChild(m);
+        area.appendChild(w);
+        area.scrollTop=area.scrollHeight;
+      }
+
+      function showTyping(){
+        const el=document.createElement('div');
+        el.className='msg bot';
+        el.innerHTML='<div class="bubble"><div class="typing"><span></span><span></span><span></span></div></div>';
+        area.appendChild(el);
+        area.scrollTop=area.scrollHeight;
+        return el;
+      }
+
+      async function sendToWorker(payload){
+        return await fetch(WORKER_URL,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)});
+      }
+
+      async function sendMessage(){
+        const txt=inp.value.trim();
+        if(!txt||finalized)return;
+        append('user',txt);
+        inp.value='';
+        const typing=showTyping();
+        btn.disabled=true;
+        try{
+          const res=await sendToWorker({messages:historyMessages.concat([{role:'user',content:txt}])});
+          typing.remove();
+          const j=await res.json();
+          const reply=j.text||'مش فاهمك قوي 😅 جرب تاني';
+          append('bot',reply);
+          historyMessages.push({role:'user',content:txt},{role:'assistant',content:reply});
+        }catch(e){
+          typing.remove();
+          append('bot','النت فاصل ولا إيه؟ 😅');
+        }
+        btn.disabled=false;
+        inp.focus();
+      }
+
+      btn.onclick=sendMessage;
+      inp.onkeydown=e=>{if(e.key==='Enter')sendMessage();};
+      quick.onclick=e=>{
+        if(e.target.tagName==='BUTTON'){
+          inp.value=e.target.dataset.text;
+          inp.focus();
+        }
+      };
+
+      append('bot','أهلاً بيك في بوت كوكب! قولّي إنت عايز تفاوض على إيه؟ 😎');
+    })();
+  </script>
 </body>
+
 </html>
