--- a/chat-widget.html
+++ b/chat-widget.html
@@ -16,10 +16,12 @@
 --radius:16px;
 }
 *{box-sizing:border-box;margin:0;padding:0;}
-body{
+html,body{
 font-family:"Tahoma",system-ui;
 background:transparent;
 overflow:hidden;
+height:100%;
+width:100%;
 }
 
 .chat-fab {
@@ -55,21 +57,24 @@ justify-content:center;
 align-items:center;
 z-index:10000;
 overflow:hidden;
+height:100dvh;
+width:100vw;
 }
 .chat-overlay.show{display:flex;}
 
 .chat-box {
 width:100%;
-height:100%;
-max-height:100vh;
+height:100dvh;
 max-height:100dvh;
 background:var(--card);
 display:flex;
 flex-direction:column;
 position:relative;
-animation:fadeIn .3s;
+animation:fadeIn .3s ease;
 overflow:hidden;
+border-radius:0;
 }
+
 @keyframes fadeIn {from{opacity:0;}to{opacity:1;}}
 
 .header {
@@ -82,8 +87,10 @@ flex-shrink:0;
 position:sticky;
 top:0;
 z-index:100;
+height:56px;
+box-shadow:0 2px 6px rgba(0,0,0,0.1);
 }
-.header .title{flex:1;font-weight:700;font-size:16px;}
+.header .title{flex:1;font-weight:700;font-size:16px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 .header .close {
 cursor:pointer;
 font-size:28px;
@@ -108,7 +115,9 @@ flex-direction:column;
 gap:6px;
 min-height:0;
 -webkit-overflow-scrolling:touch;
+scroll-behavior:smooth;
 }
+
 .controls{
 padding:8px;
 border-top:1px solid #eee;
@@ -117,7 +126,10 @@ flex-direction:column;
 gap:6px;
 flex-shrink:0;
 background:var(--card);
+position:sticky;
+bottom:0;
 }
+
 .input{display:flex;gap:8px;align-items:center;}
 .input input{
 flex:1;
@@ -142,6 +154,13 @@ min-width:0;
 .typing span:nth-child(2){animation-delay:.2s}
 .typing span:nth-child(3){animation-delay:.4s}
 @keyframes dot{0%,100%{opacity:.3;transform:translateY(0);}50%{opacity:1;transform:translateY(-3px);}}
+
+@supports (height: 100dvh) {
+  .chat-box {
+    height:100dvh;
+    max-height:100dvh;
+  }
+}
 </style>
 </head>
 <body>
@@ -179,13 +198,14 @@ const btn=document.getElementById('btn');
 const quick=document.getElementById('quickActions');
 
 const WORKER_URL='https://kawkab.kawkab-arabia.workers.dev/';
-let historyMessages=[],lastOfferPercent=null,finalized=false,timerStarted=false,timeLeft=60,countdownId=null;
+let historyMessages=[],finalized=false;
 let chatOpened=false;
 
 openBtn.onclick=()=>{
 try{
 overlay.classList.add('show');
 openBtn.classList.add('hidden');
+document.body.style.overflow='hidden'; // يمنع سكرول الخلفية
 if(!chatOpened){
 append('bot','أهلاً بيك في بوت كوكب! قولّي إنت عايز تفاوض على إيه؟ 😎');
 chatOpened=true;
@@ -200,6 +220,7 @@ closeBtn.onclick=()=>{
 try{
 overlay.classList.remove('show');
 openBtn.classList.remove('hidden');
+document.body.style.overflow=''; // يرجّع سكرول الصفحة
 if(window.parent && window.parent !== window){
 window.parent.postMessage({action:'chatClosed'},'*');
 }
