--- a/chat-widget.html
+++ b/chat-widget.html
@@ -47,16 +47,30 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
 
 /* show */
 .chat-overlay.show{display:flex}
+..chat-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh; /* الشاشة كلها */
+}
+
+.chat-messages {
+  flex: 1;
+  overflow-y: auto;
+  padding: 10px;
+  padding-bottom: 80px; /* نخلي في فراغ للـ input */
+}
+
 .chat-input {
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
   background: #fff;
-  padding: 8px;
-  padding-bottom: calc(env(safe-area-inset-bottom) + 8px); /* يحجز مساحة للـ notch أو bar */
+  padding: 10px;
+  padding-bottom: calc(env(safe-area-inset-bottom) + 10px);
   box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
 }
+
 
 /* صندوق الشات - نستخدم vh ديناميكي */
 .chat-box {
