--- a/chat-widget.html
+++ b/chat-widget.html
@@ -59,6 +59,17 @@ html,body{height:100%;background:transparent;font-family:"Tahoma",system-ui;over
   overflow:hidden;
   box-shadow:0 10px 30px rgba(2,6,23,0.12);
 }
+.chat-input {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #fff;
+  padding: 8px;
+  padding-bottom: calc(env(safe-area-inset-bottom, 20px) + 16px); 
+  /* env(...) للـ safe area ولو مش مدعوم يحط 20px افتراضي */
+  box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
+}
 
 /* الهيدر: نأخذ في الحسبان safe-area-inset-top حتى لا يختفي تحت شريط المتصفح */
 .header {
